# Larvae_AI_Repo

./: README.md
AI_Scripts/: BoxMOT_RUN.py  Final_DLC_Trainer.ipynb  Final_REID_Trainer.ipynb  Final_Yolo_Trainer.ipynb
AI_Tool_Scripts/: environment.yml  main.py  pyproject.toml
AI_Tool_Scripts/src/controllers/: cropped_master_controller.py  cropper_controller.py  demosaic_controller.py  extra_processor_controller.py  mainwindow_controller.py  mot_controller.py  pose_estimation_controller.py  reid_formatter_controller.py  thread_worker.py  video_encoder_controller.py  yolo_formatter_controller.py
AI_Tool_Scripts/src/utils/: bit_depth_convert_class.py  config_extractor_class.py  data_extractor_class.py  flashing_frames_class.py  folder_cleaner_class.py  full_frame_annotator_class.py  head_tail_time_class.py  json_copier_class.py  larvae_object_cropper.py  petri_dish_cropper_circle_class.py  petri_dish_cropper_view_class.py  raw_to_16_class.py  reid_market_data_creator.py  remove_hidden_class.py  video_encoder_class.py  yolo_data_formatter_class.py
AI_Tool_Scripts/src/windows/: cropped_master_window.py  cropper_window.py  demosaic_window.py  extra_processor_window.py  mainwindow.py  mot_window.py  pose_estimation_window.py  reid_formatter_window.py  video_encoder_window.py  yolo_formatter_window.py
RPI_GUI/RPI_GUI_Transmitter/: main.py  pyproject.toml  requirements.txt
RPI_GUI/RPI_GUI_Transmitter/src/controllers/: rpi_camera_controller.py  rpi_mainwindow_controller.py  rpi_pwm_controller.py
RPI_GUI/RPI_GUI_Transmitter/src/resources/: config.json  config_cam.json
RPI_GUI/RPI_GUI_Transmitter/src/utils/: camera_check_class.py  capture_class.py  timings.py  uart_transmitter.py
RPI_GUI/RPI_GUI_Transmitter/src/windows/: rpi_camera_window.py  rpi_mainwindow.py  rpi_pwm_window.py
RPI_GUI/RPI_Reciever/: Setup.txt  main.py  pwmcontrolClassNew.py  (+3 more)
